# ics-calendar-mcp

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: server.py
