[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ost-calendar-mcp"
version = "0.1.0"
description = "MCP server for OST school timetable & Outlook calendar"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.5.0",
    "httpx>=0.27",
    "icalendar>=6.0",
    "recurring-ical-events>=3.0",
    "python-dateutil>=2.9",
]
